# ChipEmit

./: .gitignore  CMakeLists.txt  main.cpp
emitting/: cpp_emitter.hpp
parsing/: access_level.hpp  device.hpp  field.hpp  peripheral.hpp  register.hpp
